#20 - Rewrite API a bit, no need 2 separates molecules/cid and molecules/synonym endpoints
