# applications/pub-chem-index/api/openapi.yaml
@@ -23,7 +23,7 @@ paths:
       operationId: getMolecules
       summary: List All Molecules
       description: Gets a list of all `Molecule` entities.
-  "/molecules/{cid}":
+  "/molecules/{term}":
     summary: Path used to manage a single Molecule search by CID.
     description: >-
       The REST endpoint/path used to get single instances of an `Molecule`.  This
@@ -38,36 +38,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Molecule"
           description: Successful response - returns a single `Molecule`.
-      operationId: getMoleculesByCID
+      operationId: searchMolecules
       summary: Get a Molecule
       description: Gets the details of a single instance of a `Molecule`.
     parameters:
-      - name: cid
-        description: A unique identifier for a `Molecule`.
-        schema:
-          type: string
-        in: path
-        required: true
-  "/molecules/{synonym}":
-    summary: Path used to manage a single Molecule search by synonym.
-    description: >-
-      The REST endpoint/path used to get single instances of an `Molecule`.  This
-      path contains `GET` operations used to perform the get tasks, respectively.
-    get:
-      tags:
-        - molecule
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Molecule"
-          description: Successful response - returns a single `Molecule`.
-      operationId: getMoleculesBySynonym
-      summary: Get Molecules by synonym.
-      description: Gets the details of a single instance of a `Molecule`.
-    parameters:
-      - name: synonym
+      - name: term
         description: A unique identifier for a `Molecule`.
         schema:
           type: string
