# applications/pub-chem-index/backend/pub_chem_index/controllers/molecule_controller.py
@@ -14,6 +14,7 @@ from pub_chem_index.models.molecule import Molecule  # noqa: E501
 from pub_chem_index import util
 from pub_chem_index.services import lookup
 
+
 def get_molecules():  # noqa: E501
     """List All Molecules
 
@@ -43,27 +44,16 @@ def get_molecules():  # noqa: E501
         traceback.print_exc()
         return 'Error submitting operation: %s' % e, 500
 
-def get_molecules_by_cid(cid):  # noqa: E501
+def search_molecules(term):  # noqa: E501
     """Get a Molecule
 
     Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
 
-    :param cid: A unique identifier for a &#x60;Molecule&#x60;.
-    :type cid: str
+    :param term: A unique identifier for a &#x60;Molecule&#x60;.
+    :type term: str
 
     :rtype: Molecule
     """
-    return lookup.search_molecules_by_cid(str(cid))
-
-
-def get_molecules_by_synonym(synonym):  # noqa: E501
-    """Get Molecules by synonym.
-
-    Gets the details of a single instance of a &#x60;Molecule&#x60;. # noqa: E501
-
-    :param synonym: A unique identifier for a &#x60;Molecule&#x60;.
-    :type synonym: str
-
-    :rtype: Molecule
-    """
-    return lookup.search_molecules_by_synonym(str(synonym))
+    if term.isnumeric():
+        return lookup.search_molecules_by_cid(str(term))
+    return lookup.search_molecules_by_synonym(str(term))
